[gd_scene load_steps=9 format=3 uid="uid://byrbri3utieqw"]

[ext_resource type="Script" uid="uid://b3sudv0emiiq1" path="res://script/prologue.gd" id="1_e7qxw"]
[ext_resource type="FontFile" uid="uid://vrrmdx83skor" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Regular.ttf" id="3_3d53y"]

[sub_resource type="Animation" id="Animation_mg15n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("phone:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("phone/screen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("phone/screen/Button:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dxbvt"]
resource_name = "phone_reveal"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("phone:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1200), Vector2(0, 546)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1, 1.66667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [4.0, 0.3],
"method": &"apply_shake"
}, {
"args": [4.0, 0.3],
"method": &"apply_shake"
}]
}

[sub_resource type="Animation" id="Animation_e7qxw"]
resource_name = "turn_on_phone"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("phone/screen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("phone/screen/Button:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_104pk"]
_data = {
&"RESET": SubResource("Animation_mg15n"),
&"phone_reveal": SubResource("Animation_dxbvt"),
&"turn_on_phone": SubResource("Animation_e7qxw")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3d53y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3l3ne"]

[node name="prologue" type="Node2D"]
script = ExtResource("1_e7qxw")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_104pk")
}

[node name="phone" type="Sprite2D" parent="."]
position = Vector2(0, 1200)
scale = Vector2(1.5, 1.5)

[node name="screen" type="Node2D" parent="phone"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true

[node name="ColorRect" type="ColorRect" parent="phone/screen"]
show_behind_parent = true
offset_left = -247.0
offset_top = -513.0
offset_right = 248.0
offset_bottom = 513.0

[node name="ColorRect2" type="ColorRect" parent="phone/screen"]
show_behind_parent = true
offset_left = -219.0
offset_top = 496.0
offset_right = 238.0
offset_bottom = 525.0

[node name="ColorRect3" type="ColorRect" parent="phone/screen"]
show_behind_parent = true
offset_left = -220.0
offset_top = -530.667
offset_right = 237.0
offset_bottom = -501.667

[node name="Button" type="Button" parent="phone/screen"]
offset_left = -72.0
offset_top = -383.333
offset_right = 72.0
offset_bottom = -352.333
disabled = true
text = "1 unreaded email
"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Node2D" type="Node2D" parent="."]

[node name="skip" type="ProgressBar" parent="."]
offset_left = 445.0
offset_top = 296.0
offset_right = 573.0
offset_bottom = 323.0
show_percentage = false

[node name="skip_timer" type="Timer" parent="skip"]
wait_time = 1.5

[node name="skip_label" type="Label" parent="skip"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 128.0
offset_bottom = 25.0
text = "hold rmb to skip"

[node name="mail" type="ColorRect" parent="."]
visible = false
offset_left = -556.0
offset_top = -305.0
offset_right = 567.0
offset_bottom = 302.0
color = Color(0.92549, 0.898039, 0.854902, 1)

[node name="Label" type="Label" parent="mail"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -539.5
offset_top = -280.5
offset_right = 553.5
offset_bottom = 314.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3d53y")
theme_override_font_sizes/font_size = 17
text = "Subjek: Tawaran Magang ‚Äì Kementerian Inklusi Digital dan Layanan Publik (Kantor Pusat Jakarta)
________________________________________
Kepada: 
Dari: recruitment@modisp.go.id
Tanggal: 28 Desember 2044
________________________________________
Yth. 
Dengan senang hati kami menginformasikan bahwa Anda telah terpilih untuk posisi Magang Aksesibilitas Digital di bawah Direktorat Komunikasi Inklusif (DAK) pada Kementerian Inklusi Digital (Kemensidig).
Sebagai bagian dari Tim Aksesibilitas Digital, Anda akan berkontribusi dalam misi nasional Kemensidig untuk memastikan bahwa informasi pemerintah dapat diakses oleh seluruh warga negara‚Äîtanpa memandang kemampuan, perangkat, maupun lokasi.
Tugas Anda akan mencakup:
‚Ä¢	Meninjau konten digital publik seperti dokumen, situs web, dan formulir
‚Ä¢	Memperbaiki isu aksesibilitas (misalnya, teks alternatif, struktur heading, kontras warna)
‚Ä¢	Mengoptimalkan konten agar memenuhi standar aksesibilitas nasional
Magang Anda akan dimulai minggu depan. Silakan hadir di:
üìç Direktorat Komunikasi Inklusif, Kantor Pusat, Jakarta
üß• Pakaian: Kasual namun sopan
‚òï Kopi disediakan: Maksimal 2 cangkir per hari
üì£ Dampak nasional: Tak terelakkan
Kami menantikan kontribusi Anda. Mari bersama-sama menjadikan aksesibilitas sebagai standar‚Äîbukan pilihan.

"
autowrap_mode = 2

[node name="acc_button" type="Button" parent="mail"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.933
anchor_right = 0.495
anchor_bottom = 0.933
offset_left = -33.885
offset_top = -15.331
offset_right = 33.115
offset_bottom = 15.669
text = "ACCEPT"

[node name="TextEdit" type="TextEdit" parent="mail"]
layout_mode = 0
offset_left = 85.0
offset_top = 68.0
offset_right = 142.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3d53y")
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxEmpty_3d53y")
context_menu_enabled = false
scroll_fit_content_height = true
scroll_fit_content_width = true
caret_blink = true

[node name="TextEdit2" type="TextEdit" parent="mail"]
layout_mode = 0
offset_left = 52.0
offset_top = 163.0
offset_right = 109.0
offset_bottom = 195.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3d53y")
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxEmpty_3d53y")
scroll_fit_content_height = true
scroll_fit_content_width = true
caret_blink = true

[node name="lines" type="Node2D" parent="mail"]

[node name="Label2" type="Label" parent="mail/lines"]
offset_left = 86.0
offset_top = 71.0
offset_right = 126.0
offset_bottom = 94.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3d53y")
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxEmpty_3l3ne")
text = "_____"

[node name="Label3" type="Label" parent="mail/lines"]
offset_left = 53.0
offset_top = 166.0
offset_right = 93.0
offset_bottom = 189.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3d53y")
theme_override_font_sizes/font_size = 17
theme_override_styles/normal = SubResource("StyleBoxEmpty_3l3ne")
text = "_____"

[connection signal="pressed" from="phone/screen/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="skip/skip_timer" to="." method="_on_skip_timer_timeout"]
[connection signal="pressed" from="mail/acc_button" to="." method="_on_acc_button_pressed"]
[connection signal="text_changed" from="mail/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="text_changed" from="mail/TextEdit2" to="." method="_on_text_edit_2_text_changed"]
